dataset1235/2025-2/1955397009/users/1439409056/executions/2304143742_254684124.log
== SUBMISSION (2025-09-02 17:54:15)
-- CODE: 
a = float(input("digite sua idade: "))

if a >= 18:
  print(a)
  print("Maior_de_idade")
else:
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 17:54:26)
-- CODE: 
a = float(input("digite sua idade: "))

if a >= 18:
  print(a)
  print("Maior_de_idade")
else:
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 17:56:49)
-- CODE: 
a = int(input("digite sua idade: "))

if a >= 18:
  print(a)
  print("Maior_de_idade")
else:
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 17:53:33)
-- CODE: 
a = float(input("digite sua idade: "))

if 
  a >= 18
  print(a)
  print("Maior_de_idade")
else
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 17:57:01)
-- CODE: 
a = int(input("digite sua idade: "))

if a >= 18:
  print(a)
  print("Maior_de_idade")
else:
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 17:55:13)
-- CODE: 
a = float(input("digite sua idade: "))

if a >= 18:
  print(a)
  print("Maior_de_idade")
else:
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 17:53:49)
-- CODE: 
a = float(input("digite sua idade: "))

if a >= 18:
  print(a)
  print("Maior_de_idade")
else:
  print(a)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
